<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_header">My Nanodegree Apps!</string>
    <string name="main_app1">Spotify Streamer</string>
    <string name="main_app2_1">Super Duo: Scores</string>
    <string name="main_app2_2">Super Duo: Library</string>
    <string name="main_app3">Build It Bigger</string>
    <string name="main_app4">XYZ Reader</string>
    <string name="main_app5">Capstone: My Cool App</string>
    <string name="tost_prefix">This button will launch</string>

</resources>
